fix: z-index for barcode and awesomeplete

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -83,7 +83,7 @@
 }
 
 .page-head {
-	z-index: 5;
+	z-index: 6;
 	position: sticky;
 	top: var(--navbar-height);
 	background: var(--bg-color);
